--- a/css/style.css
+++ b/css/style.css
@@ -107,12 +107,12 @@ hr {
 
 @media screen and (max-width: 992px) {
 	#navbar header {
-		font-size: 1em;
+		font-size: 1rem;
 		font-weight: bold;
-		padding: 2.5em 1.5em 0 1.5em;
+		padding: 1rem 1rem 1rem 1rem;
 	}
 	#main-doc {
 		width: 73%;
-		margin-right: 1em;
+		margin-right: 1rem;
 	}
 }
